[package]
name = "bevy_mod_raycast"
version = "0.2.2"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Ray Casting for the Bevy Engine."
repository = "https://github.com/aevyrie/bevy_mod_raycast/"
keywords = ["gamedev", "graphics", "bevy", "3d", "raycast"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy = {  version = "0.5", default-features = false, features = ["render"] }
winit = "0.24.0"

[build-dependencies]
embed-resource = "1.4"

[dev-dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "render","bevy_wgpu","bevy_winit"
] }
[[bench]]
name = "ray_mesh_intersection"
harness = false